blue-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: blue
  template:
    metadata:
      labels:
        app: myapp
        version: blue
    spec:
      containers:
      - name: myapp
        image: <your-acr-or-dockerhub>/blue-green-app:blue
        ports:
        - containerPort: 3000
