green-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: green
  template:
    metadata:
      labels:
        app: myapp
        version: green
    spec:
      containers:
      - name: myapp
        image: <your-acr-or-dockerhub>/blue-green-app:green
        command: ["node", "server-green.js"]
        ports:
        - containerPort: 3000
